--- a/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
@@ -27,5 +27,6 @@
     <converters:CountToBool x:Key="CountToBool" />
     <converters:HotTimeSpanStringConverter x:Key="HotTimeSpanStringConverter" />
     <converters:HotTimeSpanIndexConverter x:Key="HotTimeSpanIndexConverter" />
+    <converters:NSFWToString x:Key="NSFWToString" />
 
 </ResourceDictionary>
