--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagSelectionPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagSelectionPage.xaml
@@ -79,7 +79,10 @@
 
                         <FlyoutBase.AttachedFlyout>
                             <MenuFlyout>
-                                <MenuFlyoutItem Text="przestań obserwować" />
+                                <MenuFlyoutItem Text="przestań obserwować"
+                                                Command="{Binding UnobserveHashtag, 
+                                                Source={Binding Notifications, Mode=OneWay, Source={StaticResource Locator}}}"
+                                                CommandParameter="{Binding Name}"/>
                             </MenuFlyout>
                         </FlyoutBase.AttachedFlyout>
 
