--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
@@ -23,8 +23,12 @@
             <MenuFlyoutItem Text="przeglądaj" 
                             Command="{Binding GoToHashtagPage, Source={Binding Main, Mode=OneWay, Source={StaticResource Locator}}}"
                             CommandParameter="{Binding TappedHashtag}"/>
-            <MenuFlyoutItem Text="obserwuj" Tag="observeTag" Command="{Binding ObserveHashtag}"/>
-            <MenuFlyoutItem Text="nie obserwuj" Tag="unobserveTag" Visibility="Collapsed" Command="{Binding ObserveHashtag}" />
+            <MenuFlyoutItem Text="obserwuj" Tag="observeTag"
+                            Command="{Binding ObserveHashtag, Source={Binding Notifications, Mode=OneWay, Source={StaticResource Locator}}}"
+                            CommandParameter="{Binding TappedHashtag}"/>
+            <MenuFlyoutItem Text="nie obserwuj" Tag="unobserveTag" Visibility="Collapsed" 
+                            Command="{Binding UnobserveHashtag, Source={Binding Notifications, Mode=OneWay, Source={StaticResource Locator}}}"
+                            CommandParameter="{Binding TappedHashtag}"/>
             <MenuFlyoutItem Text="czarnolisto" Tag="blacklistTag" Command="{Binding BlacklistHashtag}" />
             <MenuFlyoutItem Text="usuń z czarnolisto" Tag="unblacklistTag" Visibility="Collapsed" />
         </MenuFlyout>
