--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
@@ -166,6 +166,8 @@
             <!--Pivot item one-->
             <PivotItem Margin="10,0,0,0">
                 <controls:ListViewEx x:Name="MirkoListView"
+                                     ScrollingDown="ListView_ScrollingDown"
+                                     ScrollingUp="ListView_ScrollingUp"
                                      Loaded="ListView_Loaded"
                                      ItemsSource="{Binding MirkoEntries}"
                                      ItemTemplate="{StaticResource EntryTemplate}"
