Hopefully fix a rare bug where tapping notification counter would change Pivot page.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/AppHeader.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/AppHeader.xaml
@@ -108,6 +108,7 @@
                  HorizontalAlignment="Right"
                  VerticalAlignment="Center"
                  ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                 Style="{StaticResource ListBoxNoBorder}"
                  ItemContainerStyle="{StaticResource ListBoxItemStyle}"                     
                  SelectedIndex="{Binding Source={Binding Main, Mode=OneWay, Source={StaticResource Locator}}, Path=CurrentPivotItem, Mode=TwoWay}"
                  SelectionChanged="StreamsPanel_SelectionChanged">
