--- a/Mirko_v2/Mirko_v2.Shared/App.xaml
+++ b/Mirko_v2/Mirko_v2.Shared/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="Resources/Brushes.xaml"/>
                 <ResourceDictionary Source="Resources/Converters.xaml"/>
                 <ResourceDictionary Source="Resources/Common.xaml"/>
+                <ResourceDictionary Source="Resources/PullToRefreshListView.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
