--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagNotificationsPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagNotificationsPage.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utils="using:Mirko_v2.Utils"
     xmlns:controls="using:Mirko_v2.Controls"
+    xmlns:q="using:QKit"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
@@ -28,12 +29,10 @@
         <Grid x:Name="ContentRoot" 
               Grid.Row="1" 
               Margin="0,-135,0,-24">
-            <ListView x:Name="ListView"
-                      SelectionMode="None"
-                      IsItemClickEnabled="True"
-                      ItemClick="ListView_ItemClick"
-                      ItemsSource="{Binding CurrentHashtagNotifications}"
-                      ItemContainerStyle="{StaticResource StretchedOutListViewItem}">
+            <q:MultiSelectListView x:Name="ListView"
+                                   IsItemClickEnabled="False"
+                                   SelectionModeChanged="ListView_SelectionModeChanged"
+                                   ItemsSource="{Binding CurrentHashtagNotifications}">                
 
                 <ListView.Header>
                     <Rectangle Height="140"
@@ -47,7 +46,9 @@
 
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
+                        <Grid Margin="-10,0,0,0"
+                              Background="Transparent"
+                              Tapped="Grid_Tapped">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
@@ -92,7 +93,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
 
-            </ListView>
+            </q:MultiSelectListView>
         </Grid>
     </Grid>
 </UserControl>
