--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/CachedImage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/CachedImage.xaml
@@ -12,10 +12,10 @@
     <UserControl.Resources>
         <Storyboard x:Name="ImageFadeIn">
             <DoubleAnimation Storyboard.TargetName="Image"
-                                 Storyboard.TargetProperty="Opacity"
-                                 To="1.0"
-                                 From="0.0"
-                                 Duration="0:0:0.5" />
+                             Storyboard.TargetProperty="Opacity"
+                             To="1.0"
+                             From="0.0"
+                             Duration="0:0:0.5" />
         </Storyboard>
     </UserControl.Resources>
 
@@ -23,6 +23,7 @@
         <ProgressRing x:Name="Ring"
                       Margin="0,10,0,0"
                       Background="Transparent"
+                      Visibility="Collapsed"
                       IsActive="False"/>
 
         <Image x:Name="Image"/>       
