--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
@@ -142,7 +142,8 @@
                        
                        FontSize="15.0"
                        Text="{Binding Data.AuthorName}"
-                       Foreground="{Binding Data.AuthorGroup, Converter={StaticResource GroupToColor}}" />
+                       Foreground="{Binding Data.AuthorGroup, Converter={StaticResource GroupToColor}}"
+                       Tapped="AuthorTB_Tapped"/>
 
             <TextBlock x:Name="DateTB"
                        Margin="4,4,0,0"
@@ -151,8 +152,10 @@
                        HorizontalAlignment="Left"
                        
                        FontSize="12.0"
-                       Text="{Binding Data.Date, Converter={StaticResource DateConverter}}"
-                       Foreground="Gray"/>
+                       Foreground="Gray">
+                <Run Text="{Binding Data.Date, Converter={StaticResource DateConverter}}"/>
+                <Run Text="temu"/>
+            </TextBlock>
         </StackPanel>
 
         <TextBlock x:Name="VoteTB"
