Add footer in ProfilePage.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ProfilePage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ProfilePage.xaml
@@ -128,6 +128,11 @@
                 <controls:Entry />
             </DataTemplate>
         </ListView.ItemTemplate>
-        
+
+        <ListView.Footer>
+            <Rectangle Fill="Transparent"
+                       Height="64" />
+        </ListView.Footer>
+
     </controls:ListViewEx>
 </UserControl>
