--- a/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Styles.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Styles.xaml
@@ -1435,13 +1435,12 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
-    
-    <Style TargetType="TextBlock" x:Key="TextBlockNoItems">
+
+
+    <Style TargetType="TextBlock" x:Key="TextBlockNoItems" BasedOn="{StaticResource SubheaderTextBlockStyle}">
         <Style.Setters>
-            <Setter Property="FontSize" Value="18" />
+            <Setter Property="FontSize" Value="22" />
             <Setter Property="Foreground" Value="LightGray" />
-            <Setter Property="FontWeight" Value="Light" />
         </Style.Setters>
     </Style>
 </ResourceDictionary>
